# norminette_lsp

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  norminette_msg.rs  parser.rs
