[package]
name = "norminette_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-types = "0.97.0"
nom = "7.1.3"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
	"rt-multi-thread",
	"macros",
	"io-std",
] }
tokio-macros = "2.4.0"
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
